# low_latency_betting

./: .claudeignore  .gitignore  CLAUDE.md  GITHUB_README.md  PHASE_2_DEVELOPMENT.md  PHASE_3_DEVELOPMENT.md  README.md  project_advancement.md  pyproject.toml
docs/: ARCHITECTURE.md  BUILDING_W_CLAUDE.md  BUILD_PREPROCESS_MODULE.md  BUILD_SERVING_LAYER.md  BUILD_TRAINING_MODULE.md  DEEP_DIVE_WALKTHROUGH.md  HOW_TO_BUILD_ML_SYSTEMS.md  PROBLEM_AIM.md  PRODUCTION_SYSTEM_DESIGN.md  SUMMARY.md  dataset_rules.txt
models/: player_mapping.json  xgb_server_wins.onnx
notebooks/: 01_raw_data_to_training_set.ipynb  02_model_training.ipynb  03_data_ingestion_and_queues.ipynb  04_streamlit_dashboard.ipynb
scripts/: download_training_data.sh
src/tennis_predictor/dashboard/: __init__.py  app.py
src/tennis_predictor/ingestion/: __init__.py  __main__.py  consumer.py  engine.py  models.py  pipeline.py  producer.py  queue.py  state.py
src/tennis_predictor/preprocessing/: __init__.py  __main__.py  loader.py  models.py  parser.py  pipeline.py  validator.py
src/tennis_predictor/training/: __init__.py  __main__.py  config.py  data.py  evaluator.py  exporter.py  pipeline.py  trainer.py  tuner.py
