[project]
name = "low-latency-betting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "xgboost>=2.0",
    "onnxruntime>=1.17",
    "skl2onnx>=1.16",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "redis>=5.0",
    "pyyaml>=6.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=2.0.0",
    "onnxmltools>=1.12",
    "matplotlib>=3.8",
    "optuna>=3.5",
    "streamlit>=1.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tennis_predictor"]
